--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-SECRET_KEY = FarizRza1224939u4u038u04909049-58045
-DATABASE_URL = 'turbo.az'
-PASSWORD = 'Farrza'
+SECRET_KEY=FarizRza1224939u4u038u04909049-58045
+DATABASE_URL=sqlite:///./data/cars.db
+PASSWORD=Farrza
