--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 setuptools>=68.0.0
 wheel>=0.40.0
 numpy>=1.26.0
-pandas>=2.1.1
-requests>=2.31.0
-beautifulsoup4>=4.12.2
-lxml>=4.9.3
+pandas==2.1.3
+requests==2.31.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
+sqlalchemy==2.0.23
+python-dotenv==1.0.0
+plotly==5.18.0
